New blog website

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,5 +46,10 @@
           "aspects": ["invalidHref", "preferButton"]
         }
       ]
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
     }
 }
